Translate kogito-drl.adoc.po

--- a/l10n/po/ja_JP/_guides/kogito-drl.adoc.po
+++ b/l10n/po/ja_JP/_guides/kogito-drl.adoc.po
@@ -3,151 +3,135 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-08-26 14:11+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-11-15 17:08+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/kogito-drl.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Using Kogito to add rule engine capabilities to an application"
-msgstr "アプリケーションにルール・エンジン機能を追加するためのKogitoの使い方"
+msgstr "Kogitoを使用してアプリケーションにルール・エンジン機能を追加する"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:11
-#, fuzzy
 msgid "This guide demonstrates how your Quarkus application can use Kogito to add DRL files with rules."
 msgstr "このガイドでは、QuarkusアプリケーションがKogitoを使用してルール付きのDRLファイルを追加する方法を説明します。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:16
-#, fuzzy
 msgid "Kogito is a next generation business automation toolkit that originates from well known Open Source projects Drools (for business rules) and jBPM (for business processes). Kogito aims at providing another approach to business automation where the main message is to expose your business knowledge (processes, rules and decisions)  in a domain specific way."
 msgstr "Kogitoは、よく知られたオープンソース・プロジェクトであるDrools（ビジネス・ルール用）とjBPM（ビジネス・プロセス用）から生まれた、次世代のビジネス・オートメーション・ツールキットです。Kogitoは、ビジネス・オートメーションに別のアプローチを提供することを目的としており、主なメッセージは、ビジネス・ナレッジ（プロセス、ルール、決定）をドメイン固有の方法で公開することです。"
 
 #. type: Title ==
 #: upstream/_guides/kogito-drl.adoc:17
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Prerequisites"
 msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:20
-#, fuzzy
 msgid "To complete this guide, you need:"
-msgstr "このガイドを完成させるためには"
+msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:22
-#, fuzzy
 msgid "less than 15 minutes"
 msgstr "15分未満"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:23
-#, fuzzy
 msgid "an IDE"
-msgstr "a IDE"
+msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:24
-#, fuzzy
 msgid "JDK 11+ installed with `JAVA_HOME` configured appropriately"
-msgstr "JDK 11+をインストールし、 `JAVA_HOME` を適切に設定する。"
+msgstr "JDK 11+ がインストールされ、 `JAVA_HOME` が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:25
-#, fuzzy
 msgid "Apache Maven {maven-version}"
-msgstr "Apache Maven {maven-version}。"
+msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:26
-#, fuzzy
 msgid "Docker"
-msgstr "ドッカー"
+msgstr "Docker"
 
 #. type: Title ==
 #: upstream/_guides/kogito-drl.adoc:27
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Architecture"
-msgstr "建築"
+msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:30
-#, fuzzy
 msgid "In this example, we build a very simple microservice which offers one REST endpoint:"
 msgstr "この例では、1つのRESTエンドポイントを提供する非常にシンプルなマイクロサービスを構築します。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:32
-#, fuzzy
 msgid "`/find-approved`"
-msgstr "`/find-approved`"
+msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:36
-#, fuzzy
 msgid "This endpoint will be automatically generated based on the query inserted in the Rule Unit of the DRL file.  It's an example of a stateless invocation (also called \"pure function invocation\") in which the execution of our business rules doesn't have any side effects.  The output value returned is based uniquely on the input provided."
 msgstr "このエンドポイントは、DRLファイルのRule Unitに挿入されたクエリに基づいて自動的に生成されます。これは、ビジネス・ルールの実行が副作用を伴わないステートレス呼び出し（「純粋な関数呼び出し」とも呼ばれる）の例です。返される出力値は、提供された入力に一意に基づいています。"
 
 #. type: Title ===
 #: upstream/_guides/kogito-drl.adoc:37
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Business rule"
 msgstr "ビジネスルール"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:43
-#, fuzzy
 msgid "A business rule allows to externalise decision logic into reusable pieces that can be easily used in declarative way. There are multiple ways of writing rules like https://drools.org/learn/dmn.html[DMN models], decision tables, decision trees, rules, etc. For this example we focus on the rule format backed by DRL (Drools Rule Language)."
 msgstr "ビジネスルールとは、意思決定ロジックを再利用可能なパーツに外部化し、宣言的な方法で簡単に使用できるようにするものです。ルールの書き方には、デシジョンテーブル、デシジョンツリー、ルールなど、さまざまな方法があります。この例では、DRL (Drools Rule Language)によるルール形式に注目します。"
 
 #. type: Title ==
 #: upstream/_guides/kogito-drl.adoc:44
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Solution"
 msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:48
-#, fuzzy
 msgid "We recommend that you follow the instructions in the next sections and create the application step by step.  However, you can go right to the complete example."
-msgstr "次のセクションの指示に従って、段階的にアプリケーションを作成することをお勧めします。しかし、すぐに完全な例に進むこともできます。"
+msgstr "次のセクションで紹介する手順に沿って、ステップを踏んでアプリを作成することをお勧めします。ただし、完成した例にそのまま進んでも構いません。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:50
-#, fuzzy
 msgid "Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive]."
 msgstr "Gitリポジトリをクローンする： `git clone {quickstarts-clone-url}` 、または{quickstarts-archive-url}[archive]をダウンロードする。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:52
-#, fuzzy
 msgid "The solution is located in the `kogito-drl-quickstart` {quickstarts-tree-url}/kogito-quickstart[directory]."
 msgstr "このソリューションは `kogito-drl-quickstart` {quickstarts-tree-url}/kogito-quickstart[directory] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/kogito-drl.adoc:53
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating the Maven Project"
 msgstr "Mavenプロジェクトの作成"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:56
-#, fuzzy
 msgid "First, we need a new project. Create a new project with the following command:"
 msgstr "まず、新しいプロジェクトを用意します。以下のコマンドで新しいプロジェクトを作成します。"
 
@@ -165,13 +149,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:70
-#, fuzzy
 msgid "This command generates a Maven project, importing the `kogito-quarkus-rules` extension that comes with all needed dependencies and configuration to equip your application with business automation."
 msgstr "このコマンドは、アプリケーションにビジネスオートメーションを装備するために必要なすべての依存関係と構成を備えた `kogito-quarkus-rules` エクステンションをインポートして、Maven プロジェクトを生成します。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:73
-#, fuzzy
 msgid "If you already have your Quarkus project configured, you can add the `kogito-quarkus-rules` extension to your project by running the following command in your project base directory:"
 msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリで以下のコマンドを実行することで、 `kogito-quarkus-rules` エクステンションをプロジェクトに追加することができます。"
 
@@ -183,7 +165,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:80
-#, fuzzy
 msgid "This will add the following to your `pom.xml`:"
 msgstr "これにより、 `pom.xml` に以下が追加されます。"
 
@@ -199,13 +180,12 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/kogito-drl.adoc:89
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Writing the application"
 msgstr "アプリケーションの作成"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:93
-#, fuzzy
 msgid "Let's start from the application domain model.  This application will approve Loan Applications so we have a class with all the details of the wanted Loan:"
 msgstr "まず、アプリケーションのドメインモデルから始めましょう。このアプリケーションはローンの申請を承認するものなので、希望するローンのすべての詳細を持つクラスを用意します。"
 
@@ -350,9 +330,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:163
-#, fuzzy
 msgid "And another class with the details of the Applicant:"
-msgstr "そして、申請者の詳細を記載した別のクラス。"
+msgstr "そして、申請者の詳細を記載した別のクラスを用意します。"
 
 #. type: delimited block -
 #: upstream/_guides/kogito-drl.adoc:169
@@ -425,7 +404,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:202
-#, fuzzy
 msgid "Next, we create a rule file `loan-rules.drl` inside the `src/main/resources/org/acme/kogito/queries` folder of the generated project."
 msgstr "次に、生成されたプロジェクトの `src/main/resources/org/acme/kogito/queries` フォルダ内にルールファイル `loan-rules.drl` を作成します。"
 
@@ -489,19 +467,16 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:235
-#, fuzzy
 msgid "In this file there are some example rules to decide whether the Loan should be approved or not. The service wants the Applicant to have an age equal or greater than 20 and more than 1000 currency on their bank account.  The amount of the Loan shouldn't be more than the `maxAmount`."
 msgstr "このファイルには、ローンが承認されるべきかどうかを決定するためのルールの例があります。このサービスでは、申請者の年齢が20歳以上で、銀行口座に1,000通貨以上の預金があることを求めています。ローンの金額は `maxAmount` を超えてはいけません。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:237
-#, fuzzy
 msgid "This example uses Rule Units, a new concept introduced in Kogito that helps users to encapsulate the set of rules and the facts against which those rules will be matched."
 msgstr "この例では、Kogitoに導入された新しい概念であるルール・ユニットを使用しています。これは、ルールのセットと、それらのルールが照合されるファクトをカプセル化するのに役立ちます。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:239
-#, fuzzy
 msgid "The facts inserted will be inserted into a `DataStore`, a type-safe entry point. To make everything work, we need to define both the RuleUnit and the DataStore."
 msgstr "挿入されたファクトは、タイプセーフのエントリーポイントである `DataStore` に挿入されます。すべてを機能させるには、RuleUnitとDataStoreの両方を定義する必要があります。"
 
@@ -574,43 +549,39 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:277
-#, fuzzy
 msgid "And that's it: REST endpoint to validate Loan Applications will be automatically generated from this Rule Unit."
 msgstr "これで完了です。ローン申請を検証するためのRESTエンドポイントが、このRule Unitから自動的に生成されます。"
 
 #. type: Title ==
 #: upstream/_guides/kogito-drl.adoc:279
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Running and Using the Application"
 msgstr "アプリケーションの実行と使用"
 
 #. type: Title ===
 #: upstream/_guides/kogito-drl.adoc:281
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Running in Developer Mode"
-msgstr "デベロッパーモードでの動作"
+msgstr "開発モードでの実行"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:284
-#, fuzzy
 msgid "To run the microservice in dev mode, use `./mvnw clean quarkus:dev`."
-msgstr "マイクロサービスをdevモードで実行するには、 `./mvnw clean quarkus:dev`."
+msgstr "マイクロサービスをdevモードで実行するには、 `./mvnw clean compile quarkus:dev` を使用します。"
 
 #. type: Title ===
 #: upstream/_guides/kogito-drl.adoc:285
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Running in JVM Mode"
 msgstr "JVMモードでの動作"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:288
-#, fuzzy
 msgid "When you're done playing with dev mode you can run it as a standard Java application."
-msgstr "開発モードでの作業が終わったら、標準的なJavaアプリケーションとして実行することができます。"
+msgstr "「開発モード」で遊び終わったら、標準のJavaアプリケーションとして実行することができます。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:290
-#, fuzzy
 msgid "First compile it:"
 msgstr "まず、コンパイルします。"
 
@@ -622,9 +593,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:297
-#, fuzzy
 msgid "Then run it:"
-msgstr "そして、それを実行する。"
+msgstr "それから実行してください。"
 
 #. type: delimited block -
 #: upstream/_guides/kogito-drl.adoc:301
@@ -634,27 +604,24 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/kogito-drl.adoc:303
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Running in Native Mode"
-msgstr "ネイティブモードでの動作"
+msgstr "ネイティブモードでの実行"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:306
-#, fuzzy
 msgid "This same demo can be compiled into native code: no modifications required."
-msgstr "このデモと同じものをネイティブコードにコンパイルすることができ、修正は必要ありません。"
+msgstr "同じデモをネイティブコードにコンパイルすることができます。修正は必要ありません。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:310
-#, fuzzy
 msgid "This implies that you no longer need to install a JVM on your production environment, as the runtime technology is included in the produced binary, and optimized to run with minimal resource overhead."
-msgstr "これは、ランタイム技術が生成されたバイナリに含まれており、最小限のリソースオーバーヘッドで動作するように最適化されているため、本番環境にJVMをインストールする必要がないことを意味します。"
+msgstr "これは、生成されたバイナリーにランタイム技術が含まれており、最小限のリソースオーバーヘッドで実行できるように最適化されているため、本番環境にJVMをインストールする必要がないことを意味します。"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:313
-#, fuzzy
 msgid "Compilation will take a bit longer, so this step is disabled by default; let's build again by enabling the `native` profile:"
-msgstr "コンパイルには少し時間がかかるので、このステップはデフォルトでは無効になっています。 `native` プロファイルを有効にして再度ビルドしてみましょう。"
+msgstr "コンパイルには少し時間がかかるので、このステップはデフォルトで無効になっています。 `native` プロファイルを有効にして再度ビルドしてみましょう。"
 
 #. type: delimited block -
 #: upstream/_guides/kogito-drl.adoc:317
@@ -664,9 +631,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:320
-#, fuzzy
 msgid "After getting a cup of coffee, you'll be able to run this binary directly:"
-msgstr "コーヒーを一杯飲んだら、このバイナリを直接実行できるようになります。"
+msgstr "コーヒーを飲み終わると、このバイナリーは以下のように直接実行出来るようになります:"
 
 #. type: delimited block -
 #: upstream/_guides/kogito-drl.adoc:324
@@ -676,15 +642,14 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/kogito-drl.adoc:326
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Testing the Application"
 msgstr "アプリケーションのテスト"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:330
-#, fuzzy
 msgid "To test your application, just send a request to the service with giving the person as JSON payload."
-msgstr "アプリケーションをテストするには、サービスにリクエストを送信し、JSONペイロードとして人物を渡します。"
+msgstr "アプリケーションをテストするには、人をJSONペイロードとして指定してサービスにリクエストを送信するだけです。"
 
 #. type: delimited block -
 #: upstream/_guides/kogito-drl.adoc:346
@@ -706,7 +671,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:349
-#, fuzzy
 msgid "In the response, the list of the approved applications will be returned:"
 msgstr "応答では、承認されたアプリケーションのリストが返されます。"
 
@@ -721,18 +685,16 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/kogito-drl.adoc:358
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "References"
 msgstr "リファレンス"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:361
-#, fuzzy
 msgid "https://kogito.kie.org[Kogito Website]"
-msgstr "link:https://kogito.kie.org[小木戸ウェブサイト]"
+msgstr "https://kogito.kie.org[Kogito ウェブサイト]"
 
 #. type: Plain text
 #: upstream/_guides/kogito-drl.adoc:361
-#, fuzzy
 msgid "https://docs.jboss.org/kogito/release/latest/html_single[Kogito Documentation]"
-msgstr "link:https://docs.jboss.org/kogito/release/latest/html_single[コギト・ドキュメンテーション]"
+msgstr "link:https://docs.jboss.org/kogito/release/latest/html_single[Kogito ドキュメンテーション]"
