Translate vault-pki.adoc.po

--- a/l10n/po/ja_JP/_guides/vault-pki.adoc.po
+++ b/l10n/po/ja_JP/_guides/vault-pki.adoc.po
@@ -3,133 +3,117 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-10-06 08:09+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-11-16 11:41+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/vault-pki.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Using HashiCorp Vault's PKI Secret Engine"
-msgstr "HashiCorp VaultのPKIシークレットエンジンの利用"
+msgstr "HashiCorp VaultのPKI Secret Engineの利用"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:18
-#, fuzzy
 msgid "Vault's PKI Secret Engine generates dynamic X.509 certificates. It allows services to get certificates without manually generating a private key and CSR, submitting to a CA, and waiting for signed certificate. The PKI secret engine allows dynamically generating certificates, which has the following advantages over classic CA scenarios:"
-msgstr "Vault の PKI Secret Engine は、動的な X.509 証明書を生成します。これにより、サービスは、秘密鍵と CSR を手動で生成し、CA に提出し、署名された証明書を待つことなく、証明書を取得することができます。PKIシークレットエンジンでは、証明書を動的に生成することができるため、従来のCAシナリオに比べて以下のようなメリットがあります。"
+msgstr "Vault の PKI Secret Engine は、動的な X.509 証明書を生成します。これによりサービスは、秘密鍵と CSR を手動で生成しCA に提出、署名された証明書を待つ、ということをすることなく、証明書を取得することができます。PKI Secret Engineでは、証明書を動的に生成することができるため、従来のCAシナリオに比べて以下のようなメリットがあります。"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:20
-#, fuzzy
 msgid "Generating certificates with short TTLs reduces the need for and/or size of CRLs."
 msgstr "TTLの短い証明書を生成することで、CRLの必要性や規模を軽減することができます。"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:21
-#, fuzzy
 msgid "Allows for ephemeral certificates that are generated upon application startup, stored in memory and discarded on shutdown."
 msgstr "アプリケーションの起動時に生成され、メモリに保存され、シャットダウン時に破棄される一時的な証明書を可能にします。"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:23
-#, fuzzy
 msgid "In this guide we cover the following:"
 msgstr "このガイドでは、以下のことを説明しています。"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:25
-#, fuzzy
 msgid "setup: configuring the engine to generate certificates"
 msgstr "セットアップ：証明書を生成するためのエンジンの設定"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:26
-#, fuzzy
 msgid "generation: generating certificates using roles"
 msgstr "生成：ロールを使用した証明書の生成"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:27
-#, fuzzy
 msgid "revocation: revoking a previously generated certificate"
-msgstr "revocation: 以前に生成された証明書を失効させる"
+msgstr "失効: 以前に生成された証明書を失効"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:29
-#, fuzzy
 msgid "See https://www.vaultproject.io/docs/secrets/pki/index.html#pki-secrets-engine[Vault PKI Secrets Engine's official documentation]"
 msgstr "link:https://www.vaultproject.io/docs/secrets/pki/index.html#pki-secrets-engine[Vault PKI Secrets Engineの公式ドキュメント]を参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/vault-pki.adoc:32
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Prerequisites"
 msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:35
-#, fuzzy
 msgid "To complete this guide, you need:"
-msgstr "このガイドを完成させるためには"
+msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:37
-#, fuzzy
 msgid "to complete the \"Starting Vault\" section of the {base-guide}"
-msgstr "をクリックして、{base-guide}の「Starting Vault」のセクションを完成させてください。"
+msgstr "{base-guide}の「Starting Vault」のセクションを完了"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:38
-#, fuzzy
 msgid "roughly 15 minutes"
 msgstr "約15分"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:39
-#, fuzzy
 msgid "an IDE"
-msgstr "a IDE"
+msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:40
-#, fuzzy
 msgid "JDK 11+ installed with `JAVA_HOME` configured appropriately"
-msgstr "JDK 11+をインストールし、 `JAVA_HOME` を適切に設定する。"
+msgstr "JDK 11+ がインストールされ、 `JAVA_HOME` が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:41
-#, fuzzy
 msgid "Apache Maven {maven-version}"
-msgstr "Apache Maven {maven-version}。"
+msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:42
-#, fuzzy
 msgid "Docker installed"
-msgstr "Dockerのインストール"
+msgstr "Dockerがインストールされていること"
 
 #. type: Title ==
 #: upstream/_guides/vault-pki.adoc:43
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Setup"
 msgstr "セットアップ"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:48
-#, fuzzy
 msgid "We assume there is a Vault running from the {base-guide}, and the root token is known.  The first step consists of activating the PKI Secret Engine, and configuring a CA certificate and private key:"
 msgstr "ここでは、{base-guide} から起動している Vault があり、ルート トークンが既知であることを前提とします。最初のステップは、PKI シークレット・エンジンを起動し、CA 証明書と秘密鍵を構成することです。"
 
@@ -175,25 +159,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:74
-#, fuzzy
 msgid "This example configures the CA with an internal self-signed root certificate and associated key pair that is managed by Vault. Alternatively, you can configure the CA with an existing key pair."
 msgstr "この例では、Vault で管理されている内部の自己署名ルート証明書と関連するキーペアで CA を構成しています。また、既存のキーペアを使ってCAを設定することもできます。"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:76
-#, fuzzy
 msgid "CA configuration can be done programmatically using `VaultPKISecretEngine.generateRoot(GenerateRootOptions)`"
 msgstr "CAの設定は、以下の方法でプログラム的に行うことができます。 `VaultPKISecretEngine.generateRoot(GenerateRootOptions)`"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:79
-#, fuzzy
 msgid "With the CA configured we now require a role to be defined that determines what parameters are allowed when generating certificates."
 msgstr "CAを設定した後、証明書を生成する際に許可されるパラメータを決定するロールを定義する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:82
-#, fuzzy
 msgid "Here we create a role `example-dot-com` that allows certificates with the common name allowed to be any subdomain of `my-website.com`."
 msgstr "ここでは、 `example-dot-com` というロールを作成し、 `my-website.com` の任意のサブドメインを許容するコモン・ネームを持つ証明書を許可します。"
 
@@ -210,21 +190,19 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:94
-#, fuzzy
 msgid "Role configuration can be done programmatically using `VaultPKISecretEngine.updateRole(String role, RoleOptions options)`"
-msgstr "ロールの設定は、以下のようにプログラムで行うことができます。 `VaultPKISecretEngine.updateRole(String role, RoleOptions options)`"
+msgstr "ロールの設定は、以下のようにプログラムで行うことができます: `VaultPKISecretEngine.updateRole(String role, RoleOptions options)`"
 
 #. type: Title ==
 #: upstream/_guides/vault-pki.adoc:95
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Generating Certificates"
 msgstr "証明書の生成"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:98
-#, fuzzy
 msgid "First, let's create a simple Quarkus application with Vault and Jackson extensions:"
-msgstr "まず、VaultとJacksonの拡張機能を持つシンプルなQuarkusアプリケーションを作成してみましょう。"
+msgstr "まず、VaultとJacksonのエクステンションを持つシンプルなQuarkusアプリケーションを作成してみましょう。"
 
 #. type: delimited block -
 #: upstream/_guides/vault-pki.adoc:108
@@ -241,9 +219,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:111
-#, fuzzy
 msgid "Now, configure access to Vault from the `{config-file}`:"
-msgstr "次に、 `{config-file}` から Vault へのアクセスを設定します。"
+msgstr "次に、 `{config-file}` に Vault へのアクセスを設定します。"
 
 #. type: delimited block -
 #: upstream/_guides/vault-pki.adoc:116
@@ -264,7 +241,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:123
-#, fuzzy
 msgid "We can then add a new endpoint that will allow us to generate a certificate using the configured CA & role:"
 msgstr "次に、設定されたCAとロールを使って証明書を生成することができる新しいエンドポイントを追加します。"
 
@@ -303,9 +279,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:146
-#, fuzzy
 msgid "After compiling and starting the Quarkus application, let's generate a new certificate with a generated key pair:"
-msgstr "Quarkusアプリケーションをコンパイルして起動した後、生成されたキーペアで新しい証明書を生成してみましょう。"
+msgstr "Quarkusアプリケーションをコンパイルして起動した後、生成された鍵ペアで新しい証明書を生成してみましょう。"
 
 #. type: delimited block -
 #: upstream/_guides/vault-pki.adoc:149
@@ -324,13 +299,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:156
-#, fuzzy
 msgid "Alternatively we can generate a key pair and CSR locally and generate a certificate by having vault sign our CSR."
 msgstr "また、鍵ペアとCSRをローカルに生成し、CSRにVaultが署名することで証明書を生成することもできます。"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:158
-#, fuzzy
 msgid "Let's add a new method that accepts a CSR:"
 msgstr "CSRを受け取る新しいメソッドを追加しましょう。"
 
@@ -349,9 +322,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:172
-#, fuzzy
 msgid "Now we can generate a CSR (e.g. using OpenSSL) and pass it to our `/sign` endpoint to sign and generate a certificate from the CSR:"
-msgstr "これで、CSRを生成し（OpenSSLなどを使用）、そのCSRを `/sign` エンドポイントに渡すことで、CSRに署名して証明書を生成することができます。"
+msgstr "これで、（OpenSSLなどを使用して）CSRを生成し、そのCSRを `/sign` エンドポイントに渡すことで、CSRに署名して証明書を生成することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/vault-pki.adoc:176
@@ -367,13 +339,12 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/vault-pki.adoc:184
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Revoking Certificates"
 msgstr "証明書の失効"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:187
-#, fuzzy
 msgid "Let's add another new method to our `PKIResource`:"
 msgstr "`PKIResource` に別の新しいメソッドを追加してみましょう。"
 
@@ -390,7 +361,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:198
-#, fuzzy
 msgid "And revoke a previously generated certificate:"
 msgstr "また、以前に生成された証明書を取り消すこともできます。"
 
@@ -404,21 +374,19 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/vault-pki.adoc:204
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Dynamically Mounting PKI Engines"
-msgstr "PKIエンジンの動的実装"
+msgstr "PKIエンジンの動的マウント"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:208
-#, fuzzy
 msgid "Quarkus's Vault PKI support includes that ability to mount & unmount PKI engines dynamically using the `VaultPKISecretEngineFactory` & `VaultSystemBackendEngine` interfaces."
-msgstr "QuarkusのVault PKIサポートには、 `VaultPKISecretEngineFactory` &amp; `VaultSystemBackendEngine` インターフェースを使用してPKIエンジンを動的にマウント／アンマウントする機能が含まれています。"
+msgstr "QuarkusのVault PKIサポートには、 `VaultPKISecretEngineFactory` & `VaultSystemBackendEngine` インターフェースを使用してPKIエンジンを動的にマウント／アンマウントする機能が含まれています。"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:211
-#, fuzzy
 msgid "To enable, or mount, a new PKI engine at specific mount path you can use the `VaultSystemBackendEngine.enable` method:"
-msgstr "特定のマウントパスで新しい PKI エンジンを有効にする、またはマウントするには、 `VaultSystemBackendEngine.enable` の方法を使用できます。"
+msgstr "特定のマウントパスで新しい PKI エンジンを有効にしたり、マウントするには、 `VaultSystemBackendEngine.enable` メソッドが使用できます。"
 
 #. type: delimited block -
 #: upstream/_guides/vault-pki.adoc:217
@@ -457,9 +425,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:231
-#, fuzzy
 msgid "To disable (aka unmount) a PKI engine at a specific path you simply use the `VaultSystemBackendEngine.disable` method:"
-msgstr "特定のパスでPKIエンジンを無効化（アンマウント）するには、 `VaultSystemBackendEngine.disable` の方法を使用します。"
+msgstr "特定のパスでPKIエンジンを無効化（アンマウント）するには、 `VaultSystemBackendEngine.disable` メソッドを使用します。"
 
 #. type: delimited block -
 #: upstream/_guides/vault-pki.adoc:235
@@ -469,42 +436,36 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:239
-#, fuzzy
 msgid "If you want to test if a specific mount path is already in use you can use `VaultSystemBackendEngine.isEngineMounted(String)`."
-msgstr "特定のマウントパスがすでに使用されているかどうかをテストしたい場合は、 `VaultSystemBackendEngine.isEngineMounted(String)`."
+msgstr "特定のマウントパスがすでに使用されているかどうかをテストしたい場合は、 `VaultSystemBackendEngine.isEngineMounted(String)` を使用することが出来ます。"
 
 #. type: Title ==
 #: upstream/_guides/vault-pki.adoc:240
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Conclusion"
-msgstr "結論"
+msgstr "まとめ"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:245
-#, fuzzy
 msgid "The PKI Secret Engine is a great tool for managing CAs and their provisioned certificates.  We have seen the most obvious functions of the interface but all of the methods and modes of Vault's PKI secret engine are supported, including:"
-msgstr "PKI シークレット エンジンは、CA とそのプロビジョニングされた証明書を管理するための優れたツールです。ここでは、インターフェースの最もわかりやすい機能を見てきましたが、VaultのPKIシークレットエンジンは、以下のようなすべてのメソッドとモードがサポートされています。"
+msgstr "PKI シークレット エンジンは、CA とそのプロビジョニングされた証明書を管理するための優れたツールです。ここでは、インターフェースの最もわかりやすい機能を見てきましたが、VaultのPKIシークレットエンジンの以下のようなすべてのメソッドとモードがサポートされています。"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:247
-#, fuzzy
 msgid "Provisioning roles used to generate certificates."
-msgstr "証明書の生成に使用されるプロビジョニングロール。"
+msgstr "証明書の生成に使用されるプロビジョニングロール"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:248
-#, fuzzy
 msgid "Storing the root CA externally and issuing certificates from intermediate CAs."
-msgstr "ルートCAを外部に保存し、中間CAから証明書を発行する。"
+msgstr "ルートCAを外部に保存し、中間CAから証明書を発行"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:249
-#, fuzzy
 msgid "Reading current CRLs for each provisioned engine instance."
-msgstr "プロビジョニングされた各エンジンインスタンスの現在のCRLを読み取る。"
+msgstr "プロビジョニングされた各エンジンインスタンスの現在のCRLの読み取り"
 
 #. type: Plain text
 #: upstream/_guides/vault-pki.adoc:250
-#, fuzzy
 msgid "Feel free to look at the `VaultPKISecretEngine` & `VaultPKISecretEngineFactory` interfaces."
-msgstr "`VaultPKISecretEngine` &amp; `VaultPKISecretEngineFactory` のインターフェースをご自由にご覧ください。"
+msgstr "`VaultPKISecretEngine` & `VaultPKISecretEngineFactory` のインターフェースをご自由にご覧ください。"
