Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-neo4j-neo4j-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-neo4j-neo4j-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-09-22 02:20+0000\n"
+"POT-Creation-Date: 2021-11-16 02:25+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -104,6 +104,37 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-neo4j-neo4j-build-time-config.adoc:43
 #, no-wrap
 msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-neo4j-neo4j-build-time-config_quarkus.neo4j.devservices.bolt-port]]`link:#quarkus-neo4j-neo4j-build-time-config_quarkus.neo4j.devservices.bolt-port[quarkus.neo4j.devservices.bolt-port]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"This value can be used to specify the port to which the bolt-port of the container is exposed. It must be a free port, otherwise startup will fail. A random, free port will be used by default. Either way, a messsage will be logged on which port the Neo4j container is reachable over bolt.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-neo4j-neo4j-build-time-config.adoc:44
+#: upstream/_generated-config/main/config/quarkus-neo4j-neo4j-build-time-config.adoc:53
+#, no-wrap
+msgid "int"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-neo4j-neo4j-build-time-config.adoc:52
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-neo4j-neo4j-build-time-config_quarkus.neo4j.devservices.http-port]]`link:#quarkus-neo4j-neo4j-build-time-config_quarkus.neo4j.devservices.http-port[quarkus.neo4j.devservices.http-port]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"This value can be used to specify the port to which the http-port of the container is exposed. It must be a free port, otherwise startup will fail. A random, free port will be used by default. Either way, a messsage will be logged on which port the Neo4j Browser is available.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-neo4j-neo4j-build-time-config.adoc:61
+#, no-wrap
+msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-neo4j-neo4j-build-time-config_quarkus.neo4j.devservices.additional-env-additional-env]]`link:#quarkus-neo4j-neo4j-build-time-config_quarkus.neo4j.devservices.additional-env-additional-env[quarkus.neo4j.devservices.additional-env]`\n"
 "\n"
 "[.description]\n"
@@ -113,7 +144,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-neo4j-neo4j-build-time-config.adoc:44
+#: upstream/_generated-config/main/config/quarkus-neo4j-neo4j-build-time-config.adoc:62
 #, no-wrap
 msgid "`Map<String,String>`"
 msgstr ""
