--- a/l10n/po/ja_JP/_versions/main/guides/amazon-sqs.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/amazon-sqs.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-26 02:16+0000\n"
+"POT-Creation-Date: 2021-11-16 02:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -132,7 +132,7 @@ msgid ""
 "AWS Access Key ID [None]: test-key\n"
 "AWS Secret Access Key [None]: test-secret\n"
 "Default region name [None]: us-east-1\n"
-"Default output format [None]:\n"
+"Default output format [None]: text\n"
 msgstr ""
 
 #. type: Title ===
