--- a/l10n/po/ja_JP/_guides/jms.adoc.po
+++ b/l10n/po/ja_JP/_guides/jms.adoc.po
@@ -3,31 +3,30 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-01 16:05+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Project-Id-Version: \n"
+"POT-Creation-Date: 2021-11-12 10:09+0000\n"
+"PO-Revision-Date: 2021-11-17 11:19+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/jms.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Using JMS"
-msgstr "JMSの使用"
+msgstr "Quarkus - JMSの使用"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:13
-#, fuzzy
 msgid "This guide demonstrates how your Quarkus application can use JMS messaging via the Apache Qpid JMS AMQP client, or alternatively the Apache ActiveMQ Artemis JMS client."
 msgstr "このガイドでは、QuarkusアプリケーションがApache Qpid JMS AMQPクライアント、またはApache ActiveMQ Artemis JMSクライアントを介してJMSメッセージングを使用する方法を説明します。"
 
@@ -54,10 +53,8 @@ msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:23
-#, fuzzy
-#| msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
 msgid "JDK 11+ installed with `JAVA_HOME` configured appropriately"
-msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME`  が適切に設定されていること"
+msgstr "JDK 11+ がインストールされ、 `JAVA_HOME` が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:24
@@ -66,15 +63,13 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:25
-#, fuzzy
 msgid "A running Artemis server, or Docker to start one"
-msgstr "稼働中のArtemisサーバー、またはDockerを起動するためのサーバー"
+msgstr "実行中のArtemisサーバー、または起動するためのDocker"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:26
-#, fuzzy
 msgid "GraalVM, or Docker, installed if you want to run in native mode."
-msgstr "ネイティブモードで実行したい場合は、GraalVM、またはDockerをインストールします。"
+msgstr "ネイティブモードで実行したい場合は、GraalVM、またはDockerがインストールされていること"
 
 #. type: Title ==
 #: upstream/_guides/jms.adoc:27
@@ -84,27 +79,24 @@ msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:33
-#, fuzzy
 msgid "In this guide, we are going to generate (random) prices in one component.  These prices are written to a queue (`prices`) using a JMS client.  Another component reads from the `prices` queue and stores the latest price.  The data can be fetched from a browser using a fetch button from a JAX-RS resource."
-msgstr "このガイドでは、1つのコンポーネントに(ランダムな)価格を生成します。これらの価格は、JMS クライアントを使用してキュー ( `prices` ) に書き込まれます。別のコンポーネントが `prices` のキューから読み込み、最新の価格を格納します。データは、JAX-RSリソースからフェッチボタンを使用してブラウザから取得することができます。"
+msgstr "このガイドでは、あるコンポーネントが(ランダムな)価格を生成します。これらの価格は、JMS クライアントを使用してキュー ( `prices` ) に書き込まれます。別のコンポーネントが `prices` のキューから読み込み、最新の価格を保存します。データは、JAX-RSリソースからフェッチボタンを使用してブラウザで取得することができます。"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:38
-#, fuzzy
 msgid "The guide can be used either via the Apache Qpid JMS AMQP client as detailed immediately below, or alternatively with the Apache ActiveMQ Artemis JMS client given some different configuration as <<artemis-jms, detailed later>>."
-msgstr "このガイドは、以下のように Apache Qpid JMS AMQP クライアントを使って使うこともできますし、 link:#artemis-jms[後ほど詳しく説明する] ように、Apache ActiveMQ Artemis JMS クライアントを使って使うこともできます。"
+msgstr "このガイドは、すぐ下で詳しく説明する Apache Qpid JMS AMQP クライアントを介して使うこともできますし、 link:#artemis-jms[後ほど詳しく説明する] ように、Apache ActiveMQ Artemis JMS クライアントを介して使うこともできます。"
 
 #. type: Title ==
 #: upstream/_guides/jms.adoc:40
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Qpid JMS - AMQP"
 msgstr "Qpid JMS - AMQP"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:47
-#, fuzzy
 msgid "In the detailed steps below we will use the https://qpid.apache.org/components/jms/[Apache Qpid JMS] client via the https://github.com/amqphub/quarkus-qpid-jms/[Quarkus Qpid JMS extension]. Qpid JMS uses the AMQP 1.0 ISO standard as its wire protocol, allowing it to be used with a variety of AMQP 1.0 servers and services such as ActiveMQ Artemis, ActiveMQ 5, Qpid Broker-J, Qpid Dispatch router, Azure Service Bus, and more."
-msgstr "以下の詳細な手順では、 link:https://github.com/amqphub/quarkus-qpid-jms/[Quarkus Qpid JMSエクステンションを] 使用して link:https://qpid.apache.org/components/jms/[Apache Qpid JMS] クライアントを使用します。Qpid JMSは、ワイヤプロトコルとしてAMQP 1.0 ISO標準を使用しているため、ActiveMQ Artemis、ActiveMQ 5、Qpid Broker-J、Qpid Dispatchルーター、Azure Service Busなど、さまざまなAMQP 1.0サーバーやサービスで使用することができます。"
+msgstr "以下の詳細な手順では、 link:https://github.com/amqphub/quarkus-qpid-jms/[Quarkus Qpid JMSエクステンション] を使用して link:https://qpid.apache.org/components/jms/[Apache Qpid JMS] クライアントを使用します。Qpid JMSは、ワイヤプロトコルとしてAMQP 1.0 ISO標準を使用しているため、ActiveMQ Artemis、ActiveMQ 5、Qpid Broker-J、Qpid Dispatchルーター、Azure Service Busなど、さまざまなAMQP 1.0サーバーやサービスで使用することができます。"
 
 #. type: Title ===
 #: upstream/_guides/jms.adoc:48 upstream/_guides/jms.adoc:350
@@ -119,13 +111,12 @@ msgstr "次の章で紹介する手順に沿って、ステップを踏んでア
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:55
-#, fuzzy
 msgid "Clone the Git repository: `git clone https://github.com/amqphub/quarkus-qpid-jms-quickstart.git`, or download an https://github.com/amqphub/quarkus-qpid-jms-quickstart/archive/main.zip[archive]."
 msgstr "Git リポジトリをクローンします。 `git clone https://github.com/amqphub/quarkus-qpid-jms-quickstart.git` または link:https://github.com/amqphub/quarkus-qpid-jms-quickstart/archive/master.zip[アーカイブ] をダウンロードします。"
 
 #. type: Title ===
 #: upstream/_guides/jms.adoc:56 upstream/_guides/jms.adoc:358
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating the Maven Project"
 msgstr "Mavenプロジェクトの作成"
 
@@ -148,7 +139,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:71
-#, fuzzy
 msgid "This command generates a Maven project, with its pom.xml importing the quarkus-qpid-jms extension:"
 msgstr "このコマンドは、quarkus-qpid-jmsエクステンションをインポートしたpom.xmlを持つMavenプロジェクトを生成します。"
 
@@ -164,15 +154,14 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/jms.adoc:80
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Starting the broker"
 msgstr "ブローカーの開始"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:84
-#, fuzzy
 msgid "Then, we need an AMQP broker. In this case we will use an Apache ActiveMQ Artemis server.  You can follow the instructions from the https://activemq.apache.org/components/artemis/[Apache Artemis web site] or start a broker via docker using the https://artemiscloud.io/[ArtemisCloud] container image:"
-msgstr "次に、AMQPブローカーが必要です。この場合はActiveMQ Artemisサーバーを使用します。 link:https://activemq.apache.org/components/artemis/[Apache ArtemisのWebサイト] の指示に従うか、docker経由でブローカーを起動します。"
+msgstr "次に、AMQPブローカーが必要です。この場合はActiveMQ Artemisサーバーを使用します。 link:https://activemq.apache.org/components/artemis/[Apache ArtemisのWebサイト] の手順に従うか、https://artemiscloud.io/[ArtemisCloud]コンテナイメージを使用し、docker経由でブローカーを起動します。"
 
 #. type: delimited block -
 #: upstream/_guides/jms.adoc:88
@@ -182,13 +171,12 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/jms.adoc:90
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "The price producer"
-msgstr "価格の生産者"
+msgstr "価格のプロデューサー"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:93
-#, fuzzy
 msgid "Create the `src/main/java/org/acme/jms/PriceProducer.java` file, with the following content:"
 msgstr "以下の内容の `src/main/java/org/acme/jms/PriceProducer.java` ファイルを作成します。"
 
@@ -289,15 +277,14 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/jms.adoc:142
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "The price consumer"
-msgstr "価格の消費者"
+msgstr "価格のコンシューマー"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:146
-#, fuzzy
 msgid "The price consumer reads the prices from JMS, and stores the last one.  Create the `src/main/java/org/acme/jms/PriceConsumer.java` file with the following content:"
-msgstr "価格消費者はJMSから価格を読み取り、最後の1つを保存します。以下の内容で `src/main/java/org/acme/jms/PriceConsumer.java` ファイルを作成します。"
+msgstr "価格のコンシューマーはJMSから価格を読み取り、最後の1つを保存します。以下の内容で `src/main/java/org/acme/jms/PriceConsumer.java` ファイルを作成します。"
 
 #. type: delimited block -
 #: upstream/_guides/jms.adoc:153
@@ -385,13 +372,12 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/jms.adoc:208
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "The price resource"
-msgstr "価格資源"
+msgstr "価格リソース"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:212
-#, fuzzy
 msgid "Finally, let's create a simple JAX-RS resource to show the last price.  Create the `src/main/java/org/acme/jms/PriceResource.java` file with the following content:"
 msgstr "最後に、前回の価格を表示するための簡単なJAX-RSリソースを作成してみましょう。 `src/main/java/org/acme/jms/PriceResource.java` ファイルを以下の内容で作成します。"
 
@@ -440,19 +426,17 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_guides/jms.adoc:241
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "The HTML page"
 msgstr "HTMLページ"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:244
-#, fuzzy
 msgid "Final touch, the HTML page reading the converted prices using SSE."
-msgstr "最後に、SSEを使って変換された価格を読み込んだHTMLページ。"
+msgstr "最後に、変換された価格をSSEを使って読み込むHTMLページ。"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:246
-#, fuzzy
 msgid "Create the `src/main/resources/META-INF/resources/prices.html` file, with the following content:"
 msgstr "以下の内容の `src/main/resources/META-INF/resources/prices.html` ファイルを作成します。"
 
@@ -466,11 +450,6 @@ msgid ""
 "    <meta charset=\"UTF-8\">\n"
 "    <title>Prices</title>\n"
 msgstr ""
-"<!DOCTYPE html>\n"
-"<html lang=\"en\">\n"
-"<head>\n"
-"    <meta charset=\"UTF-8\">\n"
-"    <title>Prices</title>\n"
 
 #. type: delimited block -
 #: upstream/_guides/jms.adoc:262
@@ -484,13 +463,6 @@ msgid ""
 "<body>\n"
 "<div class=\"container\">\n"
 msgstr ""
-"    <link rel=\"stylesheet\" type=\"text/css\"\n"
-"          href=\"https://cdnjs.cloudflare.com/ajax/libs/patternfly/3.24.0/css/patternfly.min.css\">\n"
-"    <link rel=\"stylesheet\" type=\"text/css\"\n"
-"          href=\"https://cdnjs.cloudflare.com/ajax/libs/patternfly/3.24.0/css/patternfly-additions.min.css\">\n"
-"</head>\n"
-"<body>\n"
-"<div class=\"container\">\n"
 
 #. type: delimited block -
 #: upstream/_guides/jms.adoc:279
@@ -516,25 +488,22 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:282
-#, fuzzy
 msgid "Nothing spectacular here. On each fetch, it updates the page."
-msgstr "目を見張るようなものは何もありません。フェッチするたびにページが更新されます。"
+msgstr "特筆すべきものは何もありません。フェッチするたびにページが更新されます。"
 
 #. type: Title ===
 #: upstream/_guides/jms.adoc:283
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Configure the Qpid JMS properties"
-msgstr "Qpid JMSのプロパティーを設定する"
+msgstr "Qpid JMSのプロパティーの設定"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:287
-#, fuzzy
 msgid "We need to configure the Qpid JMS properties used by the extension when injecting the ConnectionFactory."
 msgstr "ConnectionFactoryを注入する際にエクステンションで使用するQpid JMSプロパティーを設定する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:289
-#, fuzzy
 msgid "This is done in the `src/main/resources/application.properties` file."
 msgstr "これは、 `src/main/resources/application.properties` ファイルで行います。"
 
@@ -550,21 +519,19 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:299
-#, fuzzy
 msgid "More detail about the configuration are available in the https://github.com/amqphub/quarkus-qpid-jms#configuration[Quarkus Qpid JMS] documentation."
-msgstr "設定の詳細については、 link:https://github.com/amqphub/quarkus-qpid-jms#configuration[Quarkus Qpid JMSの] ドキュメントを参照してください。"
+msgstr "設定の詳細については、 link:https://github.com/amqphub/quarkus-qpid-jms#configuration[Quarkus Qpid JMS] のドキュメントを参照してください。"
 
 #. type: Title ===
 #: upstream/_guides/jms.adoc:301
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Get it running"
-msgstr "稼動させる"
+msgstr "実行"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:305
-#, fuzzy
 msgid "If you followed the instructions, you should have the Artemis server running.  Then, you just need to run the application using:"
-msgstr "指示に従えば、Artemis サーバーが起動しているはずです。あとは、アプリケーションを使用して実行するだけです。"
+msgstr "手順に従うことで、Artemis サーバーを起動できます。あとは、アプリケーションを使用して実行するだけです。"
 
 #. type: delimited block -
 #: upstream/_guides/jms.adoc:309
@@ -574,21 +541,19 @@ msgstr "./mvnw compile quarkus:dev\n"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:312 upstream/_guides/jms.adoc:336
-#, fuzzy
 msgid "Open `http://localhost:8080/prices.html` in your browser."
-msgstr "開く `http://localhost:8080/prices.html` をブラウザに表示してください。"
+msgstr "ブラウザーで `http://localhost:8080/prices.html` を開いてください。"
 
 #. type: Title ===
 #: upstream/_guides/jms.adoc:313
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Running Native"
-msgstr "ネイティブの実行"
+msgstr "ネイティブ実行"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:316
-#, fuzzy
 msgid "You can build the native executable with:"
-msgstr "でネイティブ実行ファイルをビルドすることができます。"
+msgstr "以下でネイティブ実行ファイルをビルドすることができます。"
 
 #. type: delimited block -
 #: upstream/_guides/jms.adoc:320
@@ -598,7 +563,6 @@ msgstr "./mvnw package -Pnative\n"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:323
-#, fuzzy
 msgid "Or, if you don't have GraalVM installed, you can instead use Docker to build the native executable using:"
 msgstr "あるいは、GraalVMをインストールしていない場合は、代わりにDockerを使ってネイティブの実行ファイルをビルドすることもできます。"
 
@@ -610,9 +574,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:329
-#, fuzzy
 msgid "and then run with:"
-msgstr "と実行します。"
+msgstr "次に、以下を実行してください。"
 
 #. type: delimited block -
 #: upstream/_guides/jms.adoc:333
@@ -622,25 +585,22 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:338
-#, fuzzy
 msgid "'''"
-msgstr "'''"
+msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/jms.adoc:341
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Artemis JMS"
-msgstr "アルテミスJMS"
+msgstr "Artemis JMS"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:349
-#, fuzzy
 msgid "The above steps detailed using the Qpid JMS AMQP client, however the guide can also be used with the Artemis JMS client. Many of the individual steps are exactly as previously <<qpid-jms-amqp, detailed above for Qpid JMS>>. The individual component code is the same.  The only differences are in the dependency for the initial project creation, and the configuration properties used. These changes are detailed below and should be substituted for the equivalent step during the sequence above."
 msgstr "上記の手順はQpid JMS AMQPクライアントを使用して詳細に説明していますが、このガイドはArtemis JMSクライアントでも使用することができます。個々のステップの多くは、 link:#qpid-jms-amqp[Qpid JMSの上記の詳細] と全く同じです。個々のコンポーネントコードも同じです。唯一の違いは、最初のプロジェクト作成のための依存関係と、使用される設定プロパティーです。これらの変更点は以下に詳述されており、上記のシーケンス中の同等のステップで代用する必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:353
-#, fuzzy
 msgid "You can go right to the completed example."
 msgstr "完成した例に進むことができます。"
 
@@ -651,36 +611,34 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:357
-#, fuzzy
 msgid "The Artemis JMS solution is located in the `jms-quickstart` {quickstarts-tree-url}/jms-quickstart[directory]."
 msgstr "Artemis JMS ソリューションは `jms-quickstart` {quickstarts-tree-url}/jms-quickstart[ディレクトリ] にあります。"
 
 #. type: Plain text
 #: upstream/_guides/jms.adoc:361
-#, fuzzy
 msgid "Create a new project with the following command:"
 msgstr "以下のコマンドで新規プロジェクトを作成します。"
 
 #. type: delimited block -
-#: upstream/_guides/jms.adoc:370
+#: upstream/_guides/jms.adoc:371
 #, no-wrap
 msgid ""
 "mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=org.acme \\\n"
 "    -DprojectArtifactId=jms-quickstart \\\n"
-"    -DnoCode \\\n"
+"    -DclassName=\"org.acme.jms.PriceResource\" \\\n"
+"    -Dpath=\"/prices\" \\\n"
 "    -Dextensions=\"resteasy,artemis-jms\"\n"
 "cd jms-quickstart\n"
 msgstr ""
 
 #. type: Plain text
-#: upstream/_guides/jms.adoc:373
-#, fuzzy
+#: upstream/_guides/jms.adoc:374
 msgid "This creates a Maven project, with its pom.xml importing the quarkus-artemis-jms extension:"
 msgstr "これは、quarkus-artemis-jmsエクステンションをインポートしたpom.xmlを持つMavenプロジェクトを作成します。"
 
 #. type: delimited block -
-#: upstream/_guides/jms.adoc:379
+#: upstream/_guides/jms.adoc:380
 #, no-wrap
 msgid ""
 "<dependency>\n"
@@ -690,25 +648,23 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: upstream/_guides/jms.adoc:384
-#, fuzzy
+#: upstream/_guides/jms.adoc:385
 msgid "With the project created, you can resume from <<starting-the-broker>> in the detailed steps above and proceed until configuring the `application.properties` file, when you should use the Artemis configuration below instead."
-msgstr "プロジェクトが作成された状態で、上記の詳細な手順で link:#starting-the-broker[[starting-the-broker]] から再開し、代わりに以下のArtemisの設定を使用する必要がある場合は、 `application.properties` ファイルを設定するまで進めることができます。"
+msgstr "プロジェクトが作成されたら、上記の詳細手順の <<starting-the-broker>> から再開し、`application.properties` ファイルの設定まで進め、代わりに以下のArtemisの設定を使用します。"
 
 #. type: Title ===
-#: upstream/_guides/jms.adoc:385
-#, fuzzy, no-wrap
+#: upstream/_guides/jms.adoc:386
+#, no-wrap
 msgid "Configure the Artemis properties"
-msgstr "Artemisのプロパティーを設定する"
+msgstr "Artemisのプロパティーの設定"
 
 #. type: Plain text
-#: upstream/_guides/jms.adoc:389
-#, fuzzy
+#: upstream/_guides/jms.adoc:390
 msgid "We need to configure the Artemis connection properties.  This is done in the `src/main/resources/application.properties` file."
 msgstr "Artemis の接続プロパティーを設定する必要があります。これは `src/main/resources/application.properties` ファイルで行います。"
 
 #. type: delimited block -
-#: upstream/_guides/jms.adoc:396
+#: upstream/_guides/jms.adoc:397
 #, no-wrap
 msgid ""
 "# Configures the Artemis properties.\n"
@@ -718,13 +674,12 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: upstream/_guides/jms.adoc:399
-#, fuzzy
+#: upstream/_guides/jms.adoc:400
 msgid "With the Artemis properties configured, you can resume the steps above from <<get-it-running>>."
-msgstr "Artemisのプロパティーを設定した状態で、 link:#get-it-running[[get-it-runing]] から上記の手順を再開することができます。"
+msgstr "Artemisのプロパティーを設定した状態で、 <<get-it-running>> から上記の手順を再開することができます。"
 
 #. type: Title ===
-#: upstream/_guides/jms.adoc:400
+#: upstream/_guides/jms.adoc:401
 #, no-wrap
 msgid "Configuration Reference"
 msgstr "設定リファレンス"
