Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-client.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-11-13 02:21+0000\n"
+"POT-Creation-Date: 2021-11-17 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -643,9 +643,14 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:306
-#, no-wrap
-msgid "Inject named `OidcClient` and `Tokens`"
+#, fuzzy, no-wrap
+#| msgid ""
+#| "    @Inject\n"
+#| "    OidcClient client;\n"
+msgid "Inject named OidcClient and Tokens"
 msgstr ""
+"    @Inject\n"
+"    OidcClient client;\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:309
@@ -722,7 +727,7 @@ msgstr ""
 #. type: Title ===
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:353
 #, no-wrap
-msgid "Use OidcClient in MicroProfile RestClient Reactive client filter"
+msgid "Use OidcClient in RestClient Reactive ClientFilter"
 msgstr ""
 
 #. type: Plain text
@@ -801,7 +806,7 @@ msgstr ""
 #. type: Title ===
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:394
 #, no-wrap
-msgid "Use OidcClient in MicroProfile RestClient client filter"
+msgid "Use OidcClient in RestClient ClientFilter"
 msgstr ""
 
 #. type: delimited block -
@@ -917,7 +922,7 @@ msgstr ""
 #. type: Title ===
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:451
 #, no-wrap
-msgid "Use Custom MicroProfile RestClient client filter"
+msgid "Use Custom RestClient ClientFilter"
 msgstr ""
 
 #. type: Plain text
@@ -1428,7 +1433,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:718
 #, fuzzy, no-wrap
 #| msgid "How to check the errors in the logs"
-msgid "How to check the errors in the logs =="
+msgid "How to check the errors in the logs"
 msgstr "ログでエラーを確認する方法"
 
 #. type: Plain text
@@ -1460,7 +1465,7 @@ msgstr ""
 #. type: Title ==
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:737
 #, no-wrap
-msgid "Token Propagation in MicroProfile RestClient client filter"
+msgid "Token Propagation"
 msgstr ""
 
 #. type: Plain text
@@ -1490,8 +1495,9 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:751
-#, no-wrap
-msgid "AccessTokenRequestFilter"
+#, fuzzy, no-wrap
+#| msgid "AccessTokenRequestFilter"
+msgid "RestClient AccessTokenRequestFilter"
 msgstr "AccessTokenRequestFilter"
 
 #. type: Plain text
@@ -1600,8 +1606,9 @@ msgstr ""
 
 #. type: Title ===
 #: upstream/_versions/main/guides/security-openid-connect-client.adoc:810
-#, no-wrap
-msgid "JsonWebTokenRequestFilter"
+#, fuzzy, no-wrap
+#| msgid "JsonWebTokenRequestFilter"
+msgid "RestClient JsonWebTokenRequestFilter"
 msgstr "JsonWebTokenRequestFilter"
 
 #. type: Plain text
