--- a/l10n/po/ja_JP/_versions/main/guides/cdi-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/cdi-reference.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-11-10 02:22+0000\n"
+"POT-Creation-Date: 2021-11-17 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2050,75 +2050,164 @@ msgid ""
 " }\n"
 msgstr ""
 
+#. type: Title ===
+#: upstream/_versions/main/guides/cdi-reference.adoc:914
+#, no-wrap
+msgid "Injecting Multiple Bean Instances Intuitively"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/cdi-reference.adoc:920
+msgid "In CDI, it's possible to inject multiple bean instances (aka contextual references) via the `javax.enterprise.inject.Instance` which implements `java.lang.Iterable`.  However, it's not exactly intuitive.  Therefore, a new way was introduced in Quarkus - you can inject a `java.util.List` annotated with the `io.quarkus.arc.All` qualifier.  The type of elements in the list is used as the required type when performing the lookup."
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/cdi-reference.adoc:925
+#: upstream/_versions/main/guides/cdi-reference.adoc:943
+#, fuzzy, no-wrap
+#| msgid ""
+#| "@ApplicationScoped\n"
+#| "public class CounterBean {\n"
+msgid ""
+"@ApplicationScoped\n"
+"public class Processor {\n"
+msgstr ""
+"@ApplicationScoped\n"
+"public class CounterBean {\n"
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/cdi-reference.adoc:930
+#, fuzzy, no-wrap
+#| msgid ""
+#| "    @Inject\n"
+#| "    CounterService counterService; <1>\n"
+msgid ""
+"     @Inject\n"
+"     @All\n"
+"     List<Service> services; <1> <2>\n"
+"}\n"
+msgstr ""
+"    @Inject\n"
+"    CounterService counterService; <1>\n"
+
+#. type: Plain text
+#: upstream/_versions/main/guides/cdi-reference.adoc:932
+msgid "The injected instance is an _immutable list_ of the contextual references of the _disambiguated_ beans."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/cdi-reference.adoc:933
+msgid "For this injection point the required type is `Service` and no additional qualifiers are declared."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/cdi-reference.adoc:935
+msgid "If an injection point declares no other qualifier than `@All` then `@Any` is used, i.e. the behavior is equivalent to `@Inject @Any Instance<Service>`."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/cdi-reference.adoc:938
+msgid "You can also inject a list of bean instances wrapped in `io.quarkus.arc.InstanceHandle`.  This can be useful if you need to inspect the related bean metadata."
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/cdi-reference.adoc:947
+#, fuzzy, no-wrap
+#| msgid ""
+#| "    @Inject\n"
+#| "    CounterService counterService; <1>\n"
+msgid ""
+"     @Inject\n"
+"     @All\n"
+"     List<InstanceHandle<Service>> services;\n"
+msgstr ""
+"    @Inject\n"
+"    CounterService counterService; <1>\n"
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/cdi-reference.adoc:957
+#, no-wrap
+msgid ""
+"     public void doSomething() {\n"
+"       for (InstanceHandle<Service> handle : services) {\n"
+"         if (handle.getBean().getScope().equals(Dependent.class)) {\n"
+"           handle.get().process();\n"
+"           break;\n"
+"         }\n"
+"       }\n"
+"     }\n"
+"}\n"
+msgstr ""
+
 #. type: Title ==
-#: upstream/_versions/main/guides/cdi-reference.adoc:916
+#: upstream/_versions/main/guides/cdi-reference.adoc:960
 #, no-wrap
 msgid "Build Time Extensions"
 msgstr "ビルド時間延長"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cdi-reference.adoc:922
+#: upstream/_versions/main/guides/cdi-reference.adoc:966
 msgid "Quarkus incorporates build-time optimizations in order to provide instant startup and low memory footprint.  The downside of this approach is that CDI Portable Extensions cannot be supported.  Nevertheless, most of the functionality can be achieved using Quarkus link:writing-extensions[extensions].  See the link:cdi-integration[integration guide] for more information."
 msgstr "Quarkus は、インスタント起動と低メモリフットプリントを提供するために、ビルド時間の最適化を取り入れています。このアプローチの欠点は、CDI ポータブル拡張機能をサポートできないことです。それにもかかわらず、ほとんどの機能は、Quarkus link:writing-extensions[エクステンション] を使用して行うことができます。詳細は、link:cdi-integration[統合ガイド] を参照してください。"
 
 #. type: Title ==
-#: upstream/_versions/main/guides/cdi-reference.adoc:923
+#: upstream/_versions/main/guides/cdi-reference.adoc:967
 #, no-wrap
 msgid "Development Mode"
 msgstr "開発モード"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cdi-reference.adoc:926
+#: upstream/_versions/main/guides/cdi-reference.adoc:970
 msgid "In the development mode, two special endpoints are registered automatically to provide some basic debug info in the JSON format:"
 msgstr "開発モードでは、JSON 形式で基本的なデバッグ情報を提供するために、2 つの特別なエンドポイントが自動的に登録されます。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cdi-reference.adoc:928
+#: upstream/_versions/main/guides/cdi-reference.adoc:972
 msgid "HTTP GET `/q/arc` - returns the summary; number of beans, config properties, etc."
 msgstr "HTTP GET `/q/arc` - 要約、Bean の数、設定プロパティーなどを返します。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cdi-reference.adoc:929
+#: upstream/_versions/main/guides/cdi-reference.adoc:973
 msgid "HTTP GET `/q/arc/beans` - returns the list of all beans"
 msgstr "HTTP GET `/q/arc/beans` - すべての Bean のリストを返します。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cdi-reference.adoc:930
+#: upstream/_versions/main/guides/cdi-reference.adoc:974
 msgid "You can use query params to filter the output:"
 msgstr "クエリーパラメーターを使用して出力をフィルタリングすることができます。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cdi-reference.adoc:931
+#: upstream/_versions/main/guides/cdi-reference.adoc:975
 msgid "`scope` - include beans with scope that ends with the given value, i.e. `http://localhost:8080/q/arc/beans?scope=ApplicationScoped`"
 msgstr "`scope` - 指定した値で終わるスコープを持つ Bean を含みます (つまり `http://localhost:8080/q/arc/beans?scope=ApplicationScoped`)。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cdi-reference.adoc:932
+#: upstream/_versions/main/guides/cdi-reference.adoc:976
 msgid "`beanClass` - include beans with bean class that starts with the given value, i.e. `http://localhost:8080/q/arc/beans?beanClass=org.acme.Foo`"
 msgstr "`beanClass` - 与えられた値で始まる Bean クラスを持つ Bean を含みます (つまり `http://localhost:8080/q/arc/beans?beanClass=org.acme.Foo`)。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cdi-reference.adoc:933
+#: upstream/_versions/main/guides/cdi-reference.adoc:977
 msgid "`kind` - include beans of the specified kind (`CLASS`, `PRODUCER_FIELD`, `PRODUCER_METHOD`, `INTERCEPTOR` or `SYNTHETIC`), i.e. `http://localhost:8080/q/arc/beans?kind=PRODUCER_METHOD`"
 msgstr "`kind` - 指定された種類の Bean (`CLASS`、`PRODUCER_FIELD`、`PRODUCER_METHOD`、`INTERCEPTOR`、または `SYNTHETIC`) を含みます (つまり `http://localhost:8080/q/arc/beans?kind=PRODUCER_METHOD`)。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cdi-reference.adoc:934
+#: upstream/_versions/main/guides/cdi-reference.adoc:978
 msgid "HTTP GET `/q/arc/removed-beans` - returns the list of unused beans removed during build"
 msgstr "HTTP GET `/q/arc/removed-beans` - ビルド中に削除された未使用の Bean のリストを返します。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cdi-reference.adoc:935
+#: upstream/_versions/main/guides/cdi-reference.adoc:979
 msgid "HTTP GET `/q/arc/observers` - returns the list of all observer methods"
 msgstr "HTTP GET `/q/arc/observers` - すべてのオブザーバーメソッドのリストを返します。"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/cdi-reference.adoc:937
+#: upstream/_versions/main/guides/cdi-reference.adoc:981
 msgid "These endpoints are only available in the development mode, i.e. when you run your application via `mvn quarkus:dev` (or `./gradlew quarkusDev`)."
 msgstr "これらのエンドポイントは開発モードでのみ使用できます。つまり `mvn quarkus:dev` (または `./gradlew quarkusDev`) 経由でアプリケーションを実行したときです。"
 
 #. type: Title ==
-#: upstream/_versions/main/guides/cdi-reference.adoc:940
+#: upstream/_versions/main/guides/cdi-reference.adoc:984
 #, no-wrap
 msgid "ArC Configuration Reference"
 msgstr ""
