--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-web-authentication.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-11-13 02:21+0000\n"
+"POT-Creation-Date: 2021-11-18 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -680,7 +680,9 @@ msgstr "ユーザー情報"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-openid-connect-web-authentication.adoc:327
-msgid "If IdToken does not provide enough information about the currently authenticated user then you can set a `quarkus.oidc.user-info-required=true` property for a https://openid.net/specs/openid-connect-core-1_0.html#UserInfo[UserInfo] JSON object from the OIDC userinfo endpoint to be requested."
+#, fuzzy
+#| msgid "If IdToken does not provide enough information about the currently authenticated user then you can set a `quarkus.oidc.user-info-required=true` property for a https://openid.net/specs/openid-connect-core-1_0.html#UserInfo[UserInfo] JSON object from the OIDC userinfo endpoint to be requested."
+msgid "If IdToken does not provide enough information about the currently authenticated user then you can set a `quarkus.oidc.authentication.user-info-required=true` property for a https://openid.net/specs/openid-connect-core-1_0.html#UserInfo[UserInfo] JSON object from the OIDC userinfo endpoint to be requested."
 msgstr "IdTokenが現在認証されているユーザーに関する十分な情報を提供しない場合は、`quarkus.oidc.user-info-required=true` プロパティーを設定することでOIDCのuserinfoエンドポイントから link:https://openid.net/specs/openid-connect-core-1_0.html#UserInfo[UserInfo] JSONオブジェクトを要求することができます。"
 
 #. type: Plain text
